# transcribe-audio-files

./: README.md  requirements.dev.txt  requirements.txt  setup.cfg
transcribe_audio_files/: __init__.py  logging_utils.py  transcribe_audio_files.py
