[metadata]
name = transcribe-audio-files
version = 0.1.4
author = Markus Kirchberg
author_email = markus@sendpotion.com
description = Transcribe Waveform Audio Files using (a derivative of) OpenAI Whisper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Team-Potion/transcribe-audio-files
license = AGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    transcribe-audio-files = transcribe_audio_files.transcribe_audio_files:main
